# cc-switch-nano

./: .gitignore  AGENTS.md  LICENSE  README.md  README_zh.md  pyproject.toml  test_ccs.py
claude_switch/: __init__.py  ccs.py  models.py  session.py  workbench.py
docs/dev/: PLAN-001.md  PLAN-002.md  PLAN-003.md  PLAN-004.md  PLAN-005.md  PLAN-006.md
labs/b1-tmux-tui/: README.md
labs/b1-tmux-tui/cc_tmux/: cli.py  manager.py  tui.py
labs/b2-pty-tui/: test_cc_pty.py
labs/b2-pty-tui/cc_pty/: manager.py  terminal_widget.py  tui.py
