[project]
name = "claude-switch"
version = "0.5.0"
description = "一键切换 claude-code 模型 — 像 opencode 一样在多 provider 间自由切换"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"

[project.scripts]
claude-switch = "claude_switch:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
